fixed text overflowing body.

--- a/src/routes/webpage.css
+++ b/src/routes/webpage.css
@@ -25,6 +25,10 @@
     color: white;
     font-size: 16px;
     gap: var(--portfolio-branding-gap);
+    height: 700px;
+
+    word-wrap: break-word;
+    overflow-y: auto;
 }
 
 /* =====================================
@@ -48,9 +52,6 @@
 
     /* Make sure width is 100% of the parent width */
     width: 100%;
-
-    /* Fit to content. */
-    height: fit-content;
 
     /* Default font color */
     color: var(--portfolio-branding-text-color);  
@@ -108,6 +109,7 @@
     height: 100%;
 
     width: fit-content;
+
     /* The width of the navigation bar */
 }
 
@@ -131,17 +133,15 @@
    Content
    ===================================== */
 .webpage .body {
-    display: none;
-    transition: all 2s;
-    width: 5px;
-    height: 5px;
-    background: yellow;
+    font-size: 4rem;
 }
 
+/*
 .webpage .body:hover {
     background: white;
     height: 100%;
 }
+*/
 
 .webpage .group {
     display: flex;
